more structure and some text

--- a/doc/report.tex
+++ b/doc/report.tex
@@ -52,10 +52,13 @@
 
 \maketitle
 
+%
+% Intro
+%
 \section{Introduction}
 
-This project aims to implement a systems model in two different modeling tools,
-namely \ar and \re.
+This project aims to model a system using two distinct frameworks, namely \ar
+and \re, and to compare both approaches.
 
 \subsection{\ar}
 
@@ -74,6 +77,9 @@ From this research activity, resulted the \re coordination language and the
 Extensible Coordination Tools (ECT) which are a ser of plug-ins for the Eclipse
 platform to deal with the coordination language.
 
+%
+% The problem
+%
 \section{The problem}
 
 The problem was to model a news website, which consists of users, a load
@@ -86,6 +92,32 @@ when necessary, spreading the load evenly, and switching down to text-mode when
 the servers are too busy. A server can respond to a given number of requests per
 minute in media mode, and $asdf$ per minute in text mode (with $asdf<asdf$
 
+%
+% Archery and Reo
+%
+\section{Evaluating \ar and \re}
+
+% Archery
+\subsection{\ar}
+
+\ar provides a better readability of the models code, with better organization of it,
+comparing to \mcrl models.
+
+However, \ar misses some features available in \mcrl, namely summands and paralelization.
+
+A graphical interface would improve a lot the development of Archery models.
+
+% Reo
+\subsection{\re}
+
+% Archery vs. Reo
+\subsection{\ar vs. \re}
+
+\ar winning\dots
+
+%
+%	Conclusion
+%
 \section{Conclusion}
 
 \re will win. 
