--- a/doc/report.tex
+++ b/doc/report.tex
@@ -78,9 +78,6 @@ from the cluster. If the load is too high with all the servers available for
 the cluster, then the servers should respond without media content, i.e., they
 should respond only the text of the requested page.
 
-% XYZ News is proud to be the reliable online news agency to first provide information in different formats to its audience. Their journalists arrive where news take place and prepare text, images and videos to be put online. However, their reputation has a price. Whenever an important event takes place, the website receives massive amounts of requests for a short period of time. XYZ applies two tactics to manage these peaks. The first is to dinamically add up to N web servers to the cluster and the second is to provide only text content in articles. Then, a server can be attending requests in either a full-media or a text-only mode. The first tactic is used until there are no more available servers. Then, the second is applied. XYZ board wants that every request is answered, and if possible, in less than n (n > m) miliseconds. They know that a server can respond in less than m miliseconds up to R simultaneous requests in full-media mode, and up to Q in the text-only one.
-
-
 %
 % The problem
 %
@@ -102,6 +99,26 @@ should respond only the text of the requested page.
 % Approach
 %
 \section{Approach}
+
+% TODO describe generic approach
+\begin{figure}[htb]
+	\begin{center}
+		\includegraphics[width=0.5\textwidth]{images/c_s_lb.png}
+	\end{center}
+	\caption{C S LB}
+	\label{fig:cslb}
+\end{figure}
+\begin{figure}[htb]
+	\begin{center}
+		\includegraphics[width=0.5\textwidth]{images/c_lb_s.png}
+	\end{center}
+	\caption{C LB S}
+	\label{fig:clbs}
+\end{figure}
+
+% TODO describe Archery approach(es)
+
+% TODO describe Reo approach(es)
 
 %
 % Archery and Reo
