--- a/doc/report.tex
+++ b/doc/report.tex
@@ -16,9 +16,7 @@
 \newcommand{\tickNo}{\hspace{1pt}\ding{55}}
 \newcommand{\ar}{Archery\xspace}
 \newcommand{\re}{Reo\xspace}
-\newcommand{\mcrl}{mCRL2\xspace}
-
-
+\newcommand{\mcrl}{$\mu$CRL2\xspace}
 
 \hypersetup{
     %bookmarks=true,         % show bookmarks bar?
@@ -43,7 +41,6 @@
     filecolor=blue,    % color of file links
     urlcolor=blue      % color of external links
 }
-
 
 \author{Jorge Mendes \and Paul van der Walt}
 \date{\today}
