--- a/doc/report.tex
+++ b/doc/report.tex
@@ -146,13 +146,16 @@ original problem.
 % Conclusion
 %
 \section{Conclusion}
-\ar provides a better readability of the models code, with better organization of it,
-comparing to \mcrl models.
+\ar provides a better readability of the models code, with better organization
+of it, comparing to \mcrl models. However, \ar misses some features available in
+\mcrl, namely summands and paralelization.
 
-However, \ar misses some features available in \mcrl, namely summands and paralelization.
+A graphical interface would improve the development of Archery models a lot.
 
-A graphical interface would improve a lot the development of Archery models.
 
+
+Something we definitely found to be a limitation in \re is the fact that it
+doesn't have proper support for values like integers in the tokens
 Make a note about the fact that \re cannot handle values in the tokens! %todo
 
 \end{document}
