--- a/doc/report.tex
+++ b/doc/report.tex
@@ -98,15 +98,15 @@ mode).
 %
 \section{Approach}
 
-% TODO describe generic approach
-There can be several approaches to model the news system. The ones that we
-though of are based on the same idea: client, servers and a load balancer. The
-functionalities and arrangement of this elements for each architecture is what
-change between the approaches.
+There are several possible approaches to model the news system. The ones that we
+thought of are all based on the same idea: clients, servers and a load balancer. The
+functionalities and arrangement of these elements for each architecture is what
+changes between the approaches.
 
-In the first approach, we can make the clients and the servers communicate
-directly between them. Also, the servers communicate with the load balancer to
-know if it should accept more requests and wich kind of mode (full-media or
+In the first approach, we can make the clients and the servers communicate with
+each other
+directly. Also, the servers communicate with the load balancer to
+know if they should accept more requests and which mode (full-media or
 text-only) should be used to provide the response. The architecture of this
 approach is depicted in Figure \ref{fig:cslb}. However, this approach needs
 a lot of connections from the clients to servers.
@@ -115,12 +115,12 @@ a lot of connections from the clients to servers.
 	\begin{center}
 		\includegraphics[width=0.5\textwidth]{images/c_s_lb.png}
 	\end{center}
-	\caption{C S LB}
+	\caption{Client $\leftrightarrow$ Server $\leftrightarrow$ Load balancer }
 	\label{fig:cslb}
 \end{figure}
 
 The second approach, depicted in Figure \ref{fig:clbs}, is the one that we
-tried to implement, and provides an unique point of communication between the
+tried to implement, and provides a single point of communication between the
 clients and the servers. It results in less channels for communication, but the
 load balancer needs to be aware of the clients identification to route the
 requests/reponses correctly.
@@ -129,11 +129,13 @@ requests/reponses correctly.
 	\begin{center}
 		\includegraphics[width=0.5\textwidth]{images/c_lb_s.png}
 	\end{center}
-	\caption{C LB S}
+	\caption{Client $\leftrightarrow$ Load balancer  $\leftrightarrow$ Server }
 	\label{fig:clbs}
 \end{figure}
 
 % TODO describe Archery approach(es)
+
+no dynamic connections! Pity for dynamically adding servers. 
 
 % TODO describe Reo approach(es)
 
@@ -170,6 +172,15 @@ the media mode, and the other representing text mode. In \re this makes no
 difference, but if one exports the model to \mcrl, probably a different delay
 per channel could be
 implemented there. 
+
+The other thing that was needed, was to somehow send the server's response back
+to the right client. The way this was solved in the \re model is by creating a
+connector which receives all the responses and filters them. Unfortunately \re
+doesn't actually know what value a given token has, even though this is
+reflected in the generated \mcrl code. The result is that the filter is seen as
+a pipe which may, or may not, transmit each packet, so an alternative animation
+is generated each time. This is also not the way things usually work in real
+life, but to keep the load balancer model simple, we chose this solution.
 
 \begin{figure}[h]
     \begin{center}
