a little bit of Archery

--- a/doc/report.tex
+++ b/doc/report.tex
@@ -135,6 +135,23 @@ requests/reponses correctly.
 
 % TODO describe Archery approach(es)
 
+\subsection{\ar Approach}
+
+The basic approaches described above were modeled in \ar. However, due to some
+limitations in \ar (or the translator), we've not been able to create a full
+model of the system.
+
+We first tried the approach described in Figure \ref{fig:cslb}, but we hadn't
+enough knowledge at the time about out to implement the identification of the
+clients.
+
+Then we tried the other approach, which we dropped because we had to set all
+the attachments by hand and that version has too many connections.
+
+After those failed attempts, we tried again the approach from the first
+attempt, but we couldn't complete it because of the language / translator
+limitations.
+
 % TODO describe Reo approach(es)
 
 \subsection{\re Approach}
