final version reo, small comment

--- a/doc/report.tex
+++ b/doc/report.tex
@@ -218,6 +218,8 @@ original problem.
 % Archery
 \subsection{\ar}
 
+The first small and obvious frustration with \ar is its lack of support for
+comments in the model.
 
 % Reo
 \subsection{\re}
